examples/tests/semantic/pass/assign3.tig
let
	var x : int := 1
	var y := 2
in
  x := y + 1 + 2;
	y := x + 1
end
