examples/tests/semantic/fail/undeclaredtype.tig
let 
    var x : couscous := 3
in
end